--- a/sample.env
+++ b/sample.env
@@ -46,3 +46,14 @@ SONG_THUMBNAIL_IMAGE='https://telegra.ph/file/820cac7cb7b1a025542e2.jpg'
 
 # API Server Port (default: 24859)
 API_SERVER_PORT = 24859
+
+# Lookup URL of music or video and the prefix.
+# Using "!stream LTC:9235230" would do the following.
+# Example: GET: https://test.com/api/stream/convert/LTC:9235230
+# Returns: { "status": true, "url": "https://us-mo-kansascity-1.listentochurch.com:8443/5293803.mp3" }
+# Or: {"status": false}
+#LOOK_UP_ENDPOINT='https://test.com/api/stream/lookup'
+#LOOK_UP_PREFIX='LTC'
+
+# Log Configuration
+ENABLE_LOG = true
